@@ -1,6 +1,7 @@
 Feb 23 2024
   ensembl-prep: fixed code to handle scaffold-only assemblies
-
+  ensembl: fixed output dir for tracks
+  
 Feb 22 2024
   ensembl: updated source to build 111
 
